style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}

body {
  font-family: "London Tube", sans-serif;
  background-color: black;
  color: black;
}

main {
  max-width: 600px;
  display: inline-block;
  margin: 0 auto;
  display: block;

}

h1 {
  text-align: center;
  font-size: calc(10vw + 4em);
  margin: 0;
  color: white;
  font-family: "Oleo Script";
}

h2 {
  text-align: center;
  display: block;
  background-color: navy;
  color: white;
  font-size: 2em;
  margin-bottom: 20px;
}

button {
  display: inline-block;
  font-size: 1rem;
  width: 30%;
  height: 50px;
  text-align: center;
  opacity: 0.8;
  padding: 1%;
  margin: 0;
  position: relative;
  border: none;
  overflow: hidden;
}

.choose-your-line {
  width: 100%;
  margin: auto;
}

.choose-your-line > div {
}

label:hover, label:active {
  opacity: 1;
}

input[type="radio"] {
  display: none;
}

.bakerloo {
  background-color: #b36305;
  color: white;
}

.overground {
  background-color: #ee7c0e;
  color: white;
}

.circle {
  background-color: #ffd300;
  color: black;
}

.hammersmith {
  background-color: #f3a9bb;
  color: black;
}

.metropolitan {
  background-color: #9b0056;
  color: white;
}

.jubilee {
  background-color: #a0a5a9;
  color: black;
}

.central {
  background-color: #e32017;
  color: white;
}

.district {
  background-color: #00782a;
  color: white;
}

.northern {
  background-color: #000000;
  color: white;
}

.piccadilly {
  background-color: #003688;
  color: white;
}

.victoria {
  background-color: #0098d4;
  color: white;
}

.waterloo-city {
  background-color: #95cdba;
  color: black;
}

.tfl-rail {
  background-color: #0019a8;
  color: white;
}

.tram {
  background-color: #84b817;
  color: white;
}
.dlr {
  background-color: #00a4a7;
  color: white;
}

img {
  display: block;
  margin: auto;
}

.output {
  display: block;
}

figcaption {
  text-align: center;
  color: white;
  background-color: black;
  margin: 5% 0;
}

